--- a/metube/README
+++ b/metube/README
@@ -12,6 +12,7 @@ Subscribe to a channel
 View updates from their friends in their home page if they have friends
 View most viewed media
 View most recently uploaded media
+View recommended media based of the type of media they are currently viewing, etc
 Search the meTube system by keywords or by word cloud
 etc...
 
