--- a/metube/README
+++ b/metube/README
@@ -8,6 +8,7 @@ Add friends to contacts and message anyone in their contact list
 Start discussions and add users to discussion group
 Rate and update reviews
 Add/create media to playlist/favorite list
+Add/delete comment
 Subscribe to a channel
 View updates from their friends in their home page if they have friends
 View most viewed media
