--- a/metube/README
+++ b/metube/README
@@ -1,6 +1,6 @@
 Database Management Systems Project - Spring 2019
 
-meTube is a modified version of the popular youTube.com, meTube allows for more multimedia options like audio, gifs and images.
+MeTube is a modified version of the popular youtube.com, MeTube allows for more multimedia options like audio, gifs and images.
 When sigined in users can: 
 Set media view access when they upload files and after they have uploaded
 Block any user in the meTube system from viewing their file
