--- a/metube/README
+++ b/metube/README
@@ -1,21 +1,22 @@
-Database Management Systems Project - Spring 2019
+# Database Management Systems Project - Spring 2019
 
 MeTube is a modified version of the popular youtube.com, MeTube allows for more multimedia options like audio, gifs and images.
-When sigined in users can: 
-Set media view access when they upload files and after they have uploaded
-Block any user in the meTube system from viewing their file
-Add friends to contacts and message anyone in their contact list
-Start discussions and add users to discussion group
-Rate and update reviews
-Add/create media to playlist/favorite list
-Add/delete comment
-Subscribe to a channel
-View updates from their friends in their home page if they have friends
-View most viewed media
-View most recently uploaded media
-Download media
-View recommended media based of the type of media they are currently viewing, etc
-Search the meTube system by keywords or by word cloud
-etc...
+
+# When sigined in users can: 
+- Set media view access when they upload files and after they have uploaded
+- Block any user in the meTube system from viewing their file
+- Add friends to contacts and message anyone in their contact list
+- Start discussions and add users to discussion group
+- Rate and update reviews
+- Add/create media to playlist/favorite list
+- Add/delete comment
+- Subscribe to a channel
+- View updates from their friends in their home page if they have friends
+- View most viewed media
+- View most recently uploaded media
+- Download media
+- View recommended media based of the type of media they are currently viewing, etc
+- Search the meTube system by keywords or by word cloud
+- etc...
 
 view meTube here http://mademetube.com
